@@ -1552,10 +1552,9 @@ QR =
     id   = @previousSibling.hash[2..]
     text = ">>#{id}\n"
 
-    sel = window.getSelection()
+    sel = d.getSelection()
     if (s = sel.toString().trim()) and id is $.x('ancestor-or-self::blockquote', sel.anchorNode)?.id.match(/\d+$/)[0]
-      # XXX Opera needs d.getSelection() to retain linebreaks from the selected text
-      s = d.getSelection().trim() if $.engine is 'presto'
+      # XXX Opera doesn't retain `\n`s?
       s = s.replace /\n/g, '\n>'
       text += ">#{s}\n"
 
@@ -1563,12 +1562,10 @@ QR =
     caretPos = ta.selectionStart
     # Replace selection for text.
     ta.value = ta.value[...caretPos] + text + ta.value[ta.selectionEnd..]
-    ta.focus()
     # Move the caret to the end of the new quote.
     range = caretPos + text.length
-    # XXX Opera counts newlines as double
-    range += text.match(/\n/g).length if $.engine is 'presto'
     ta.setSelectionRange range, range
+    ta.focus()
 
     # Fire the 'input' event
     $.event ta, new Event 'input'
