@@ -1,4 +1,6 @@
 master
+- Mayhem
+  Fix selection quoting on Opera.
 
 2.37.0
 - noface
